# openakita

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  AI_Agent_框架_市场数据_行业报告_2026.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION_REPORT.md  Django框架调研报告_2025.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  MEMORY.md  MVP 交付物清单.md  MVP 产品需求文档 V1.0.md  MVP 营销预研报告.md  NOTICE  PROMPT_build.md  PROMPT_plan.md  README.md  README_CN.md  README_JA.md  RELEASE.md  RESOURCE_REQUIREMENTS.md  SECURITY.md  SOUL.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  Untitled  _commit_msg.txt  _diff_client.txt  _diff_config.txt  _diff_epmgr.txt  _diff_llmview.txt  (+75 more)
apps/setup-center/src-tauri/: .taurignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.external-backend.dev.conf.json
apps/setup-center/src-tauri/capabilities/: default.json
apps/setup-center/src-tauri/icons/: icon.icns
apps/setup-center/src-tauri/resources/bootstrap/: README.md  manifest.json
apps/setup-center/src-tauri/resources/openakita-server/_internal/aiolimiter-1.2.1.dist-info/: RECORD
apps/setup-center/src-tauri/resources/openakita-server/_internal/apscheduler-3.11.2.dist-info/: RECORD
apps/setup-center/src-tauri/resources/openakita-server/_internal/gevent-25.9.1.dist-info/: RECORD
apps/setup-center/src-tauri/resources/openakita-server/_internal/jsonschema-4.25.1.dist-info/: RECORD
apps/setup-center/src-tauri/src/: crash_handler.rs  main.rs  migrations.rs
apps/setup-center/src-tauri/windows/: hooks.nsh  installer.nsi
(+3127 files in other folders)
